--- a/Codes/index.html
+++ b/Codes/index.html
@@ -7,6 +7,9 @@
   	<link rel="stylesheet"  href="home.css" />
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Reem Kufi:wght@400;700&display=swap" />	
 		<script src="script.js"></script>
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap');
+		</style>
 </head>
 <body>
   	<div class="th-nav">
@@ -77,6 +80,7 @@
 						<a href="mailto:info@thaekedar.com" class='ft-link-a'><p>info@thaekedar.com</p></a>
 					</div>
 				</div>
+				<div id="ft-copyright">Copyright © 2024 Thaekedar. All rights reserved.</div>
 		</div>
 </body>
 </html>
