--- a/Codes/index.html
+++ b/Codes/index.html
@@ -6,41 +6,40 @@
   	
   	<link rel="stylesheet"  href="home.css" />
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Reem Kufi:wght@400;700&display=swap" />	
-		<script src="script.js"></script>
-		<style>
-			@import url('https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap');
-		</style>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap">
+		<title>Thaekedar-Home</title>
 </head>
 <body>
   	<div class="th-nav">
     		<b class="thaekedar">THAEKEDAR</b>
     		<img src="photo/thaekedarlogo.png" alt="logo" id="img-logo">
     		<div class="nav-link-div">
-      			<div><a class="nav-link" href="home.html">Home</a></div>
-      			<div class="nav-link">Agencies </div>
+      			<div><a class="nav-link" href="index.html">Home</a></div>
+      			<a href="agencies.html"><div class="nav-link">Agencies </div></a>
 						<div class="dropdown">
 
 							<div class="nav-link" id="peoples">Peoples</div>
 
 							<div class="dropdown-content">
-								<a href="#">Interior Designer</a>
-								<a href="#">Architect</a>
-								<a href="#">Engineer</a>
+								<a href="interiordesigner.html">Interior Designer</a>
+								<a href="architect.html">Architect</a>
+								<a href="engineer.html">Engineer</a>
 							</div>
 						</div>
-      			<div class="nav-link">Suppliers</div>
-      			<div class="signup-wrapper">
+      			<a href="suppliers.html"><div class="nav-link">Suppliers</div></a>
+      			<a href="signup.html" id="lgin"><div class="signup-wrapper">
         				<div class="nav-link" id="signUpTxt">SignUp</div>
       			</div>
+						</a>
     		</div>
   	</div>
 		<h1 id="con-build">Connect<br>Build.</h1>
 		<p id="herop">Your every needs of resources while building a <br>house or be it outsourcing</p>
 		<img src="photo/th1.png" alt="heroimg" id="heroimg">
 		<div id="herobut-wrap">
-			<button class="herobutton">Agencies</button>
-			<button class="herobutton">Peoples</button>
-			<button class="herobutton">Suppliers</button>
+			<a href="agencies.html"><button class="herobutton">Agencies</button></a>
+			<a href="architect.html"><button class="herobutton">Architect</button></a>
+			<a href="suppliers.html"><button class="herobutton">Suppliers</button></a>
 		</div>
 		<div id="scroller-bg">
 			<h3 id="sc-h3">Find your Construction needs  </h3>
