--- a/Codes/contactregister.html
+++ b/Codes/contactregister.html
@@ -26,11 +26,133 @@
           </div>
         </div>
         <a href="suppliers.html"><div class="nav-link">Suppliers</div></a>
-        <a href="signup.html" id="lgin"><div class="signup-wrapper">
-            <div class="nav-link" id="signUpTxt">SignUp</div>
+        <a href="profile.html" id="lgin"><div class="signup-wrapper">
+            <div class="nav-link" id="signUpTxt">Profile</div>
         </div>
         </a>
     </div>
 </div>
+<h2 id="title">Add Your's <br>Contact</h2>
+<div id="highlight"></div>
+<form action="">
+  <div id="first-contact">
+  <div class="form-fields">
+  <label>Name</label> <br>
+  <input type="text" placeholder="Enter Name" name="name"><br>
+  </div>
+  <div class="form-fields">
+  <label>Location</label><br>
+  <input type="text" placeholder="Enter Location" name="location"><br>
+  </div>
+  <div class="form-fields">
+  <label>Designation</label><br>
+  <select name="Designation" >
+    <option value="Agency">Agency</option>
+    <option value="Interior Designer">Interior Designer</option>
+    <option value="Architect">Architect</option>
+    <option value="Engineer">Engineer</option>
+    <option value="Supplier">Supplier</option>
+  </select>
+  </div>
+  <div class="form-fields">
+  <label>Email</label><br>
+  <input type="email" placeholder="Enter your Email" name="email">
+  </div>
+</div>
+<div class="form-desc" id="desc-grp">
+<label>Description</label><br>
+<textarea type="text" placeholder="Enter small description about your agency/service and experience" class="desc" name="description"></textarea>
+</div>
+<div id="cn-heading">
+  <p id="form-cn-det">Contact Details</p>
+  <div id="cd-highlight"></div>
+</div>
+<div id="contact-detail">
+  <div class="form-fields">
+  <label>Phone no</label> <br>
+  <input type="text" placeholder="Enter your phone no" name="phoneno"><br>
+  </div>
+  <div class="form-fields">
+  <label>Instagram link</label><br>
+  <input type="text" placeholder="Eg:https://instagram.com/triyani/" name="iglink"><br>
+  </div>
+  <div class="form-fields">
+  <label>Facebook</label><br>
+  <input type="text" placeholder="Eg:https://facebook.com/triyani/" name="fblink"><br>
+  </div>
+  <div class="form-fields">
+  <label>Website link</label><br>
+  <input type="text" placeholder="Eg:https://triyani.com.np/" name="weblink">
+  </div>
+</div>
+
+<!-- Upload photo -->
+<div id="photo-heading">
+  <p id="form-ph">Photo</p>
+  <div id="ph-highlight"></div>
+</div>
+<div id="ph-drag-area"onclick="inputclick()">
+    <img src="photo/Upload to Cloud.png" alt="drop" id="drag-img"><br>
+    <p class="drag-p1">Click to upload</p>
+    <p class="drag-p2">or</p>
+
+    <div class="choose-wrapper"onclick="inputclick()">
+      <div class="nav-link" id="chooseTxt">Choose file</div>
+    </div>
+    <input type="file" name="photo" id="drag-input" hidden accept=".png,.jpeg,.jpg">
+    <p id="drag-formats">Supported formats: png,jpeg,jpg</p>
+</div>
+
+<div id="docx-heading">
+  <p id="form-docx">Document/license</p>
+  <div id="docx-highlight"></div>
+</div>
+
+<!-- document / license -->
+<div id="docx-drag-area"onclick="inputclick()">
+    <img src="photo/Upload to Cloud.png" alt="drop" id="drag-img"><br>
+    <p class="drag-p1">Click to upload</p>
+    <p class="drag-p2">or</p>
+
+    <div class="choose-wrapper"onclick="inputclick()">
+      <div class="nav-link" id="chooseTxt">Choose file</div>
+    </div>
+    <input type="file" name="docx" id="drag-input" hidden accept=".png,.jpeg,.jpg,.pdf">
+    <p id="drag-formats">Supported formats: png,jpeg,jpg,pdf</p>
+</div>
+<button id="ca-submit">Submit Contact Application</button>
+</form>
+
+<!-- footer -->
+<div id="thfooter">
+  <img src="photo/thaekedarlogo.png" alt="footerlogo" id="ft-img-logo">
+  <b class="ft-thaekedar">THAEKEDAR</b>
+  <p id="ft-p">Thaekedar is a Construction Contact <br>management system where you can find <br>contacts of agencies to suppliers</p>
+  <h3 id='ft-follow'>Follow us on:</h3>
+  <div id="ft-links">
+    <a href="https://www.facebook.com"><img src="photo/Facebook.png" alt="fblink" class="ft-link-img"></a>
+    <a href="https://www.twitter.com"><img src="photo/Twitter.png" alt="twlink"class="ft-link-img"></a>
+    <a href="https://www.instagram.com"><img src="photo/Instagram.png" alt="iglink"class="ft-link-img"></a>
+  </div>
+  <div id="ft-desc-link">
+    <h3 id="ft-bold-link">Links</h3>
+    <div id="ft-desc-li">
+      <a href=""class='ft-link-a'><p>Agencies</p></a>
+      <a href=""class='ft-link-a'><p>Interior Designer</p></a>
+      <a href=""class='ft-link-a'><p>Architect</p></a>
+      <a href=""class='ft-link-a'><p>Engineer</p></a>
+      <a href=""class='ft-link-a'><p>Suppliers</p></a>
+    </div>
+  </div>
+    <div id="ft-desc-contact">
+      <h3 id="ft-bold-contact">Contact</h3>
+      <div id="ft-desc-cn">
+        <a href=""class='ft-link-a'><p>9863456312</p></a>
+        <a href="mailto:info@thaekedar.com" class='ft-link-a'><p>info@thaekedar.com</p></a>
+      </div>
+    </div>
+    <div id="ft-copyright">Copyright © 2024 Thaekedar. All rights reserved.</div>
+</div>
 </body>
+<script src="script.js"></script>
 </html>
