--- a/Codes/index.html
+++ b/Codes/index.html
@@ -7,6 +7,7 @@
   	<link rel="stylesheet"  href="home.css" />
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Reem Kufi:wght@400;700&display=swap" />	
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
 		<title>Thaekedar-Home</title>
 </head>
 <body>
