--- a/Codes/signup.html
+++ b/Codes/signup.html
@@ -6,6 +6,7 @@
   <title>Thaekedar-signup</title>
   <link rel="stylesheet" href="signup.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Reem Kufi:wght@400;700&display=swap" />	
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=News+Cycle:wght@400;700&display=swap');
 		</style>
