--- a/Codes/contactregister.html
+++ b/Codes/contactregister.html
@@ -14,19 +14,19 @@
     <b class="thaekedar">THAEKEDAR</b>
     <img src="photo/thaekedarlogo.png" alt="logo" id="img-logo">
     <div class="nav-link-div">
-        <div><a class="nav-link" href="index.html">Home</a></div>
-        <a href="agencies.html"><div class="nav-link">Agencies </div></a>
+        <div><a class="nav-link" href="index.php">Home</a></div>
+        <a href="agencies.php"><div class="nav-link">Agencies </div></a>
         <div class="dropdown">
 
           <div class="nav-link" id="peoples">Peoples</div>
 
           <div class="dropdown-content">
-            <a href="interiordesigner.html">Interior Designer</a>
-            <a href="architect.html">Architect</a>
-            <a href="engineer.html">Engineer</a>
+            <a href="interiordesigner.php">Interior Designer</a>
+            <a href="architect.php">Architect</a>
+            <a href="engineer.php">Engineer</a>
           </div>
         </div>
-        <a href="suppliers.html"><div class="nav-link">Suppliers</div></a>
+        <a href="suppliers.php"><div class="nav-link">Suppliers</div></a>
         <a href="profile.html" id="lgin"><div class="signup-wrapper">
             <div class="nav-link" id="signUpTxt">Profile</div>
         </div>
