--- a/Codes/th-admin.html
+++ b/Codes/th-admin.html
@@ -14,11 +14,11 @@
         <img src="photo/thaekedarlogo.png" alt="logo" id="admin-logo">
         <h1>THAEKEDAR</h1>
     <div id="admin-menu">
-        <div id="aprovedecline" onclick="admenu_color()">
-            <a href=""><p>Approve/Decline Contact</p></a>
+        <div id="aprovedecline">
+            <a href="applicants.php"><p>Approve/Decline Contact</p></a>
         </div>
         <div id="mgmtcn">
-            <a href=""><p>Manage contact</p></a>
+            <a href="managecn.html"><p>Manage contact</p></a>
         </div>
     </div>
     </div>
